infra/k8s/dep/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.ticeting-app.art
      http:
        paths:
          - pathType: Prefix
            path: "/api/payments"
            backend:
              service:
                name: payments-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/user/currentuser"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/signup"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/signin"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/logout"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/tickets/(.*)"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/tickets/update/(.*)"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/api/tickets"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/tickets"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/orders/(.*)"
            backend:
              service:
                name: orders-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/orders/update/(.*)"
            backend:
              service:
                name: orders-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/orders/delete/(.*)"
            backend:
              service:
                name: orders-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/api/orders/create"
            backend:
              service:
                name: orders-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/api/orders"
            backend:
              service:
                name: orders-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/orders/(.*)"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: "/tickets/(.*)"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: "/client/auth/(.*)"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.ticeting-app.art"
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
